# rair

./: .gitignore  LICENSE  README.md  my_model.py  pyproject.toml  test_data_versioning.py  todo.md
.github/workflows/: ci.yml
rair/: __init__.py  __main__.py  archive.py  auto_detect.py  cli.py  cli_parser.py  config.py  core.py  git.py  hashing.py  models.py  script_type.py  setup.py  tracking.py  utils.py
tests/: __init__.py  mymodel.py  test_archive.py  test_auto_detect.py  test_auto_discover.py  test_cli.py  test_cli_e2e.py  test_cli_parser.py  test_config.py  test_core.py  test_data_versioning.py  test_git.py  test_models.py  test_run_json.py  test_script_type.py  test_setup.py  test_tracking.py  test_utils.py
